--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
     <div class="ketqua">
       <label for="ciphertext">Bản mã:</label>
       <textarea id="ciphertext" rows="4" cols="40"></textarea>
-      <div class="nut">
-        <button onclick="chuyen()">Chuyển</button><br>
-        <button onclick="save_ban_ma()">Lưu</button>
-      </div>
+        <button id = "chuyen" onclick="chuyen()">Chuyển</button><br>
+        <button id = "luu_ban_ma" onclick="save_ban_ma()">Lưu</button>
     </div>
   </div>
 
@@ -68,8 +66,7 @@
     </div>
     <label for="giaiMa">Bản rõ:</label>
     <textarea id="giaiMa" rows="4" cols="40"></textarea>
-
-    <button onclick="save_ban_ro()">Lưu</button>
+    <button id = "luu_ban_ro" onclick="save_ban_ro()">Lưu</button>
   </div>
 </body>
 </html>
